# goopylib-v1

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST  MANIFEST.in  README.md  SECURITY.md  core  countlines.py  feature_request.md  goopy-devV6.py  goopy.py  goopylib_tests.py  graphics.py  main.cpp  pyproject.toml  requirements.txt  setup-archive.py  setup.cfg  setup.py  setup.py~  setup_extensions.py  sound_test.py  test.py  window_callbacks  window_states
src/: CMakeLists.txt  config.h  goopylib.h  gp.h  opengl.h
src/color/: Color.cpp  Color.h  ColorCMYK.cpp  ColorCMYK.h  ColorHSL.cpp  ColorHSV.cpp  ColorHSV.h  ColorHex.cpp  ColorHex.h  ColorRGB.cpp  ColorRGB.h  ColorStructs.h  Util.cpp  Util.h  W3CX11.h
src/core/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  Core.cpp  Core.h  IndexBuffer.cpp  IndexBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/debug/: Error.cpp  Error.h  Log.cpp  LogMacros.h
src/ext/: config.h  debug.h  header.h
src/ext/archive/: buffers.cpp  buffers.h  buffers.py  module.cpp  module.h  shader.cpp  shader.h  shader.py  texture.py  vertex_array.cpp  vertex_array.h
src/ext/color/: capsule.h  color.cpp  color.h  color_module.h  color_object.h  colormodule.h  conversions.cpp  conversions.h  macros.h
src/ext/core/: core.cpp  core.h  window.cpp  window.h  window_capsule.h  window_object.h
src/ext/math/: easing.cpp  easing.h
src/ext/maths/: easing.cpp  easing.h
src/ext/objects/: circle.cpp  circle.h  ellipse.cpp  ellipse.h  ellipse_capsule.h  ellipse_module.h  ellipse_object.h  image.cpp  image.h  line.cpp  line.h  quad.cpp  quad.h  quad_capsule.h  quad_object.h  rectangle.cpp  rectangle.h  renderable.cpp  renderable.h  renderable_capsule.h  renderable_module.h  renderable_object.h  triangle.cpp  triangle.h
src/ext/scene/: camera.cpp  camera.h  camera_capsule.h  camera_controller.cpp  camera_controller.h  camera_module.h  camera_object.h
src/goopylib/: goopylib.h
src/goopylib/color/: Color.cpp  Color.h  ColorCMYK.cpp  ColorCMYK.h  ColorConversions.cpp  ColorConversions.h  ColorHSL.cpp  ColorHSL.h  ColorHSV.cpp  ColorHSV.h  ColorHex.cpp  ColorHex.h  ColorRGB.cpp  ColorRGB.h  ColorStructs.h  Util.cpp  Util.h  W3CX11.cpp  W3CX11.h
src/goopylib/core/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  Core.cpp  Core.h  IndexBuffer.cpp  Texture2D.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  Window.cpp  Window.h
src/goopylib/debug/: Error.cpp  Error.h  Log.cpp  Log.h  LogMacros.h
src/goopylib/events/: KeyboardCodes.h  MouseCodes.h
src/goopylib/maths/: Easing.cpp  Easing.h  Packing.cpp  Packing.h  gpmath.cpp  gpmath.h
src/goopylib/maths/packing/: Packing.cpp  Packing.h  PackingCore.cpp  PackingCore.h  Shelf.cpp  Shelf.h
src/goopylib/objects/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Image.cpp  Image.h  Line.cpp  Line.h  Point.h  Quad.cpp  Quad.h  Rectangle.cpp  Rectangle.h  Renderable.cpp  Renderable.h  Text.cpp  Text.h  TexturedQuad.cpp  TexturedQuad.h  TexturedRectangle.cpp  TexturedRectangle.h  Triangle.cpp  Triangle.h  Vertex.h
src/goopylib/objects/text/: Font.cpp  Font.h  Glyph.cpp  Glyph.h  Text.cpp  Text.h  TextCharacter.cpp  TextCharacter.h
src/goopylib/scene/: Batch.cpp  Batch.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Renderer.cpp  Renderer.h  RenderingManager.cpp  RenderingManager.h
src/goopylib/shader/: Shader.cpp  Shader.h  ShaderFiles.h  ellipse.frag  ellipse.vert  image.frag  image.vert  line.frag  line.vert  polygon.frag  solid.frag  solid.vert  text.frag  textSDF.frag  texture.frag  texture.vert  vec2.vert
src/goopylib/texture/: Bitmap.cpp  Bitmap.h  Texture2D.cpp  Texture2D.h  TextureAtlas.cpp  TextureAtlas.h  TextureType.cpp  TextureType.h
src/goopylib/window/: Window.cpp
src/maths/: Easing.cpp  Easing.h  Packing.h  gpmath.h
src/maths/packing/: Bin.cpp  Bin.h  Item.cpp  Item.h  Packing.cpp  Packing.h  PackingAlgorithm.cpp  PackingAlgorithm.h  Shelf.cpp  Shelf.h  ShelfPackingAlgorithm.cpp  ShelfPackingAlgorithm.h  ShelvedBin.cpp  ShelvedBin.h  SortingAlgorithms.cpp  SortingAlgorithms.h
src/maths/packing/algorithms/: FirstFit.cpp  FirstFit.h  NextFit.cpp  NextFit.h  PackingAlgorithm.cpp  PackingAlgorithm.h  ScoredAlgorithms.cpp  ScoredAlgorithms.h  (+6 more)
src/objects/: Circle.h  Ellipse.cpp  Ellipse.h  Image.cpp  Image.h  Line.cpp  Line.h  Quad.cpp  Quad.h  Rectangle.h  Renderable.cpp  Renderable.h  TexturedQuad.cpp  TexturedQuad.h  TexturedRectangle.cpp  TexturedRectangle.h  Triangle.cpp  Triangle.h  Vertex.h
src/platform/GLFW/: Window.cpp
src/platform/Independent/: Buffer.cpp  Window.cpp
src/platform/OpenGL/: Buffer.cpp  Line.cpp  RenderingManager.cpp  Shader.cpp  Texture2D.cpp  TextureAtlas.cpp  VertexArray.cpp
src/platform/events/: KeyboardCodes.h  MouseCodes.h
src/rendering/: Renderer.cpp  Renderer.h  RenderingBatch.h  RenderingBatchBase.cpp  RenderingBatchBase.h  RenderingManager.cpp  RenderingManager.h  TextureRenderer.cpp  TextureRenderer.h
src/scene/: Camera.h  CameraController.h  Renderer.cpp  Renderer.h  RenderingBatch.cpp  RenderingBatch.h  RenderingBatchBase.cpp  RenderingBatchBase.h  RenderingManager.cpp  RenderingManager.h  TextureRenderer.cpp  TextureRenderer.h
src/shader/: Shader.cpp  Shader.h  ShaderFiles.h  ellipse.frag  solid.frag  solid.vert  texture.vert
src/texture/: Bitmap.cpp  Bitmap.h  Texture2D.cpp  Texture2D.h  TextureAtlas.cpp  TextureAtlas.h  TextureBuffer.cpp  TextureBuffer.h  TextureCoords.cpp  TextureCoords.h
src/window/: Camera.cpp  Camera.h  CameraController.h  KeyboardCodes.h  Window.cpp  Window.h
tests/color/: CMakeLists.txt  cmyk.cpp  color.cpp  color.h  color.py  color_tests.cpp  conversions.py  hex.cpp  hsl.cpp  hsv.cpp  random.cpp  random_color.py  rgb.cpp
tests/core/: CMakeLists.txt  core.cpp  core.py  core_examples.py  index_buffer.cpp
tests/core/window/: window.py  window_callbacks.py  window_states.py
(+1032 files in other folders)
