[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "goopylib"
description = "A powerful game, graphics, and application development library for Python"
version = "2.0.0.dev3"
readme = "README.md"

requires-python = ">=3.8"
license = { file = "LICENSE.md" }

authors = [
    { name = "Bhavye Mathur", email = "bhavyemathur@gmail.com" },
]

keywords = [
    "Python GUI",
    "Graphics",
    "2D Graphics",
    "OpenGL",
    "Game Development",
    "Game Engine",
    "Application Development",
    "User Interfaces"
]

classifiers = [
    "Intended Audience :: Developers",

    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: User Interfaces",

    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",

    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",

    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[project.urls]
"Homepage" = "https://github.com/BhavyeMathur/goopylib"
"Bug Tracker" = "https://github.com/BhavyeMathur/goopylib/issues"

[tool.cibuildwheel]
build-frontend = "build"

[tool.cibuildwheel.macos]
repair-wheel-command = "DYLD_LIBRARY_PATH=src/vendor/GLFW delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
archs = ["x86_64", "arm64"]
