[metadata]
name = goopylib
version = 1.1.316a25
author = Bhavye Mathur
author_email = bhavyemathur@gmail.com

description = A simple-yet-powerful 2D graphics framework built on top of Tkinter capable of creating good-looking, modern GUIs, games, and animations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BhavyeMathur/goopylib

download_url = https://github.com/BhavyeMathur/goopylib/archive/v1.1.282-alpha.tar.gz
project_urls =
    Bug Tracker = https://github.com/BhavyeMathur/goopylib/issues
    Documentation = https://github.com/BhavyeMathur/goopylib/wiki
    Source Code = https://github.com/BhavyeMathur/goopylib/tree/master/goopylib
    YouTube = https://youtube.com/playlist?list=PLkoMapv5O9PIAYZJcBXSZ7ktYmcbVD2jh
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Natural Language :: English

key_words =
    Tkinter
    2D Graphics
    Python GUI
    Game Creator
    Graphics Library'

[options]
package_dir =
    = goopylib
packages = find:
python_requires = >=3.6

install_requires =
    pillow

[options.packages.find]
where = goopylib
