[metadata]
name = goopylib
version = 2.0.0
author = Bhavye Mathur
author_email = bhavyemathur@gmail.com

maintainer = Bhavye Mathur
maintainer_email = bhavyemathur@gmail.com

description = A powerful game, graphics, and application development library for C++ and Python
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

key_words =
    Python GUI
    Graphics
    OpenGL
    Graphical User Interface
    Game Development

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

include_package_data = True

[options.packages.find]
where = .
