[metadata]
name = goopylib
version = 2.0.0.dev5
author = Bhavye Mathur
author_email = bhavyemathur@gmail.com

description = A powerful game, graphics, and application development library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BhavyeMathur/goopylib

license = MPL-2

project_urls =
    Homepage = https://github.com/BhavyeMathur/goopylib
    Bug Tracker = https://github.com/BhavyeMathur/goopylib/issues

classifiers =
    Intended Audience :: Developers
    
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: User Interfaces
    
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

key_words =
    Python GUI
    Graphics
    2D Graphics
    OpenGL
    Game Development
    Game Engine
    Application Development
    User Interfaces

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    frozendict
include_package_data = False

[options.packages.find]
where = .
